# github-activity-db

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  github_activity.db  github_activity.db-journal  pyproject.toml
alembic/: env.py
alembic/versions/: 01421d8dfaeb_initial_pr_schema.py  a2b3c4d5e6f7_add_sync_failures.py  b3c4d5e6f7g8_rename_filenames_to_file_changes.py
docs/: architecture.md  data-model.md  database.md  development.md  github-api-quirks.md  rate-limit-handling.md  roadmap.md  testing.md
src/github_activity_db/: __init__.py  config.py  logging.py
src/github_activity_db/cli/: __init__.py  app.py  common.py  github.py  sync.py
src/github_activity_db/db/: __init__.py  engine.py  models.py
src/github_activity_db/db/repositories/: __init__.py  base.py  pull_request.py  repository.py  sync_failure.py
src/github_activity_db/github/: __init__.py  client.py  exceptions.py
src/github_activity_db/github/pacing/: __init__.py  batch.py  pacer.py  progress.py  scheduler.py  token_bucket.py
src/github_activity_db/github/rate_limit/: __init__.py  monitor.py  schemas.py
src/github_activity_db/github/sync/: __init__.py  bulk_ingestion.py  commit_manager.py  enums.py  ingestion.py  multi_repo_orchestrator.py  results.py  retry_service.py
src/github_activity_db/schemas/: __init__.py  base.py  enums.py  github_api.py  nested.py  pr.py  repository.py  tag.py
tests/: __init__.py  conftest.py  factories.py  test_cli_sync.py  test_config.py  test_db_engine.py  test_db_models.py  test_github_client.py  test_logging.py  test_pr_ingestion_e2e.py  test_schemas_contract.py  test_schemas_github_api.py  test_schemas_nested.py  test_schemas_pr.py  test_schemas_repository.py  test_schemas_tag.py
tests/cli/: test_sync_integration.py
tests/db/repositories/: test_pull_request_repo.py  test_repository_repo.py  test_sync_failure_repo.py
tests/fixtures/: __init__.py  github_responses.py  rate_limit_responses.py  real_pr_merged.py  real_pr_open.py
tests/github/: __init__.py  test_client.py
tests/github/pacing/: __init__.py  test_batch.py  test_integration.py  test_pacer.py  test_progress.py  test_scheduler.py  test_token_bucket.py
tests/github/rate_limit/: __init__.py  test_monitor.py  test_monitor_concurrency.py  test_schemas.py
tests/github/sync/: __init__.py  test_bulk_ingestion.py  test_commit_manager.py  test_commit_manager_integration.py  test_ingestion.py  test_multi_repo_orchestrator.py  test_retry_service.py
