[project]
name = "github-activity-db"
version = "0.1.0"
description = "Searchable data store for GitHub PR data with custom tagging"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "agentmoose", email = "phoenixtechnerd@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "githubkit>=0.12",
    "python-dotenv>=1.0",
    "alembic>=1.14",
    "structlog>=24.0",
    "typer>=0.15",
    "rich>=13.0",
    "greenlet>=3.3.0",
]

[project.scripts]
ghactivity = "github_activity_db.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_activity_db"]

# ------------------------------------------------------------------------------
# Ruff - Linting & Formatting
# ------------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",     # allow assert in tests
    "RUF022",   # allow categorized __all__ (not alphabetically sorted)
    "UP046",    # allow Generic[T] subclass pattern for broader compatibility
    "ASYNC109", # allow timeout parameter naming in async functions
    "ASYNC110", # allow sleep in while loop for queue drain patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # allow assert and test tokens/passwords

[tool.ruff.lint.isort]
known-first-party = ["github_activity_db"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ------------------------------------------------------------------------------
# Mypy - Type Checking
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["githubkit.*", "aiosqlite.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ------------------------------------------------------------------------------
# Pytest - Testing
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ------------------------------------------------------------------------------
# Coverage - Test Coverage
# ------------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/github_activity_db"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
